<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.geoking.travelkeeper.fragments.HolidayDetailsFragment">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="me.geoking.travelkeeper.MainActivity"
        tools:showIn="@layout/app_bar_main">

        <ImageView
            android:id="@+id/visit_details_image"
            android:layout_width="0dp"
            android:layout_height="290dp"
            android:src="@drawable/side_nav_bar"
            app:layout_constraintBottom_toTopOf="@+id/visit_details_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/visit_details_title"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/title_visit_details"
            android:singleLine="true"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintBottom_toTopOf="@+id/visit_details_tags"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/visit_details_image"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/visit_details_tags"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="56dp"
            android:hint="@string/visit_details_tags"
            android:singleLine="true"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintBottom_toTopOf="@+id/visit_details_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/visit_details_image" />

        <Button
            android:id="@+id/visit_details_date"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/visit_details_date"
            android:textAppearance="@android:style/TextAppearance.Material.Menu"
            app:layout_constraintBottom_toTopOf="@+id/visit_details_notes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/visit_details_image"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/visit_details_notes"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:hint="@string/visit_details_notes"
            android:inputType="textMultiLine"
            android:singleLine="false"
            app:layout_constraintBottom_toTopOf="@+id/add_visit_to_holiday"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/visit_details_title" />

        <Spinner
            android:id="@+id/add_visit_to_holiday"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/visit_holiday_match"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/visit_details_notes" />

        <Button
            android:id="@+id/visit_details_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/upload"
            android:textAppearance="@android:style/TextAppearance.Material.Menu"
            app:layout_constraintBottom_toBottomOf="@+id/visit_details_image"
            app:layout_constraintEnd_toEndOf="@+id/visit_details_image"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/visit_details_image"
            app:layout_constraintTop_toTopOf="@+id/visit_details_image"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/visit_details_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/remove"
            android:textAppearance="@android:style/TextAppearance.Material.Menu"
            app:layout_constraintBottom_toBottomOf="@+id/visit_details_image"
            app:layout_constraintEnd_toEndOf="@+id/visit_details_image"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/visit_details_image"
            app:layout_constraintTop_toTopOf="@+id/visit_details_image"
            app:layout_constraintVertical_bias="0.0" />


    </android.support.constraint.ConstraintLayout>

</FrameLayout>