<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="314dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:theme="@style/AppTheme.Button"
            android:id="@+id/places_to_eat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/places_restaurants_title"
            app:layout_constraintBottom_toTopOf="@+id/places_parks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/places_tourism"
            app:layout_constraintTop_toBottomOf="@+id/mapView" />

        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:theme="@style/AppTheme.Button"
            android:id="@+id/places_tourism"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/places_tourism_title"
            app:layout_constraintBottom_toTopOf="@+id/places_shopping"
            app:layout_constraintEnd_toStartOf="@+id/places_to_eat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mapView" />

        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:theme="@style/AppTheme.Button"
            android:id="@+id/places_shopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/places_shopping_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/places_parks"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/places_tourism" />

        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:theme="@style/AppTheme.Button"
            android:id="@+id/places_parks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/places_parks_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/places_shopping"
            app:layout_constraintTop_toBottomOf="@+id/places_to_eat" />
    </android.support.constraint.ConstraintLayout>

</RelativeLayout>