<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.geoking.travelkeeper.fragments.HolidayDetailsFragment">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="me.geoking.travelkeeper.MainActivity"
        tools:showIn="@layout/app_bar_main">

        <ImageView
            android:id="@+id/visit_view_details_image"
            android:layout_width="0dp"
            android:layout_height="278dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/side_nav_bar"
            app:layout_constraintBottom_toTopOf="@+id/visit_view_details_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/visit_view_details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:hint="@string/title_visit_details"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@+id/visit_view_details_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/visit_view_details_date" />

        <TextView
            android:id="@+id/visit_view_details_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:hint="@string/title_visit_address"
            android:maxLines="2"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintBottom_toTopOf="@+id/visit_view_details_tags"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/visit_view_details_title" />

        <TextView
            android:id="@+id/visit_view_details_tags"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:hint="@string/visit_details_tags"
            android:singleLine="true"
            android:text="@string/visit_details_tags"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintBottom_toTopOf="@+id/visit_view_details_notes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/visit_view_details_address" />

        <TextView
            android:id="@+id/visit_view_details_date"
            android:layout_width="395dp"
            android:layout_height="37dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:text="@string/visit_details_date"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textSize="23sp"
            app:layout_constraintBottom_toTopOf="@+id/visit_view_details_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/visit_view_details_image" />

        <TextView
            android:id="@+id/visit_view_details_notes"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/visit_details_notes"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/visit_view_details_tags" />


    </android.support.constraint.ConstraintLayout>
</FrameLayout>
